--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
-  "name": "uf",
-  "version": "1.0.0",
+  "name": "unofile",
+  "version": "1.0.1",
   "description": "unoFile client for the terminal",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/thatarvinguy/unofile-terminal-client.git"
   },
   "bin": {
     "uf": "./index.js"
