--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unofile",
-  "version": "1.0.1",
-  "description": "unoFile client for the terminal",
+  "version": "1.1.0",
+  "description": "A command line tool to easy share and store files with unoFile",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
